# pulse

./: .gitignore  AGENT.md  LICENSE  README.md
backend/: .env.example  README.md  __init__.py  pyproject.toml
backend/ai/: __init__.py  copilot.py
backend/api/: __init__.py  main.py  routes.py
backend/audio/: __init__.py  acoustic.py  asr.py  detector.py  diarization.py  multimodal.py  storage.py  transcript_extractor.py  transcription.py  validator.py
backend/models/: __init__.py  common.py
backend/services/: __init__.py  audit_store.py  confirmation.py  demo_workflow.py  event_store.py  evidence_fusion.py  multimodal_voice_pipeline.py  voice_pipeline.py
backend/simulation/: scenarios.py  sweep.py
backend/tests/phase2/: test_demo_voice_pipeline.py  test_end_to_end_demo_scenario.py  test_multimodal_perception_slice.py  test_voice_evidence_fusion_contract.py
backend/tests/phase3/: test_ai_copilot_boundary.py  test_copilot_boundary.py
backend/tests/simulation/: test_scenario_sweep.py
backend/tests/workflow/: __init__.py  helpers.py  test_airway.py  test_base.py  test_coordinator.py  test_cpr.py  test_demo_workflow.py  test_engine.py  test_event_processor.py  test_events.py  test_hs_ts.py  test_medications.py  test_phase1_engine_integration.py  test_qa_break_engine.py  test_recommendations.py  test_rhythm.py  test_rosc.py  test_shocks.py  test_timers.py
backend/workflow/: __init__.py  airway.py  base.py  coordinator.py  cpr.py  engine.py  event_processor.py  events.py  hs_ts.py  medications.py  recommendations.py  rhythm.py  rosc.py  shocks.py  timers.py
(+45 files in other folders)
